--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -15,7 +15,7 @@
     "has the same probability of occurring.\n",
     "\n",
     "* <h4><u>Gaussian distributions</u></h4>\n",
-    "also called normal distributions are one of the most\n",
+    "also called <b>normal distributions</b> are one of the most\n",
     "important probability density functions. They are used to model the distribution\n",
     "of continuous random variables. Their shape looks like a bell there is a peak of\n",
     "probability that decreases when you move off.\n",
