--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Implementation of the Gaussian function.\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# Implementation of Binomial Co-efficient:\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Implementation of Binomial Function:\n",
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -262,13 +262,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "<BarContainer object of 101 artists>"
      },
-     "execution_count": 66,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -310,8 +310,30 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Poisson Distribution\n",
+    "* is a discrete distribution function describing the probability that an\n",
+    "event will occur a certain number of times in a fixed time (or space) interval.\n",
+    "* used to model count-based data, like the number of emails arriving in\n",
+    "your mailbox in one hour or the number of customers walking into a shop in\n",
+    "one day, for instance.\n",
+    "* The distribution is a function that takes the number of occurrences of the\n",
+    "event as input (the integer called k in the next formula) and outputs the\n",
+    "corresponding probability (the probability that there are k events occurring).\n",
+    "* Note that both the binomial and the Poisson distributions are discrete:\n",
+    "they give probabilities of discrete outcomes.\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "outputs": [],
    "source": [],
    "metadata": {
